# il-scaling-in-games

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
conf/: nethack_config.yaml  rollout_example.parameters
conf/nethack/exp/: train_sample.yaml
conf/nethack/rollouts/: rollout_mamba.yaml
experiment_data/atari/eval_loss/: eval_loss_BankHeist.tar  eval_loss_BattleZone.tar  eval_loss_Boxing.tar  eval_loss_Breakout.tar  eval_loss_DoubleDunk.tar  eval_loss_NameThisGame.tar  eval_loss_Phoenix.tar  eval_loss_Qbert.tar  eval_loss_SpaceInvaders.tar
experiment_data/atari/eval_return/: eval_return_BankHeist.tar  eval_return_BankHeist_0.tar  eval_return_BankHeist_1.tar  eval_return_BankHeist_2.tar  eval_return_BankHeist_3.tar  eval_return_BankHeist_4.tar  eval_return_BankHeist_5.tar  eval_return_BattleZone.tar  eval_return_BattleZone_0.tar  eval_return_BattleZone_1.tar  eval_return_BattleZone_2.tar  eval_return_BattleZone_3.tar  eval_return_BattleZone_4.tar  eval_return_BattleZone_5.tar  eval_return_Boxing.tar  eval_return_Boxing_0.tar  eval_return_Boxing_1.tar  eval_return_Boxing_2.tar  eval_return_Boxing_3.tar  eval_return_Boxing_4.tar  eval_return_Boxing_5.tar  eval_return_Breakout.tar  eval_return_Breakout_0.tar  eval_return_Breakout_1.tar  eval_return_Breakout_2.tar  (+32 more)
il_scale/atari/: clean_data.py  data_gen.py  data_split.py  data_stats.py  eval_game.py  eval_loss.py  eval_return.py  flop_table.py  retrieve_samples.py  train_atari_il.py  train_atari_rl.py
il_scale/nethack/: agent.py  config.py  crop.py  ddp_util.py  net.py  rollout.py  utils.py
(+1032 files in other folders)
